--- a/notebooks/Heatmap_variate_Visualization.ipynb
+++ b/notebooks/Heatmap_variate_Visualization.ipynb
@@ -5563,12 +5563,12 @@
     "                    color=\"Happiness Score\",\n",
     "                    color_continuous_scale=px.colors.sequential.Rainbow,\n",
     "                    title='Hapiness Scores in 2015 ',\n",
-    "                    scope=\"world\")\n",
-    "fig.show()\n",
-    "# fig.update_layout(geo_scope='world',\n",
-    "# #                               colorscale=True,\n",
-    "#                               title_text='Hapiness Scores in 2015 '\n",
-    "#                                )"
+    "#                     scope=\"world\")\n",
+    "# fig.show()\n",
+    "fig.update_layout(geo_scope='world',\n",
+    "#                               colorscale=True,\n",
+    "                              title_text='Hapiness Scores in 2015 '\n",
+    "                               )"
    ]
   },
   {
